--- a/Test_bb/Controllers/MainViewController.xib
+++ b/Test_bb/Controllers/MainViewController.xib
@@ -1,22 +1,61 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="MainViewController" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="MainViewController" customModule="Test_bb" customModuleProvider="target">
             <connections>
+                <outlet property="backgroundColorButton" destination="Yxk-Av-dCf" id="PPw-UF-HaG"/>
+                <outlet property="textColorButton" destination="d1A-Tf-Hpi" id="Srq-Q2-S9v"/>
+                <outlet property="titleLabel" destination="ez7-9p-rd9" id="cl8-cB-Rq2"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+            <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+            <subviews>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ez7-9p-rd9">
+                    <rect key="frame" x="32" y="108" width="350" height="30"/>
+                    <constraints>
+                        <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="30" id="PhA-CZ-qbX"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                    <nil key="textColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Yxk-Av-dCf">
+                    <rect key="frame" x="125" y="788" width="164" height="30"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="30" id="gdt-sc-D1V"/>
+                    </constraints>
+                    <state key="normal" title="Promijeni boju pozadine"/>
+                </button>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="d1A-Tf-Hpi">
+                    <rect key="frame" x="135.5" y="728" width="143" height="30"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="30" id="MZa-Et-dz3"/>
+                    </constraints>
+                    <state key="normal" title="Promijeni boju teksta"/>
+                </button>
+            </subviews>
             <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+            <constraints>
+                <constraint firstItem="Yxk-Av-dCf" firstAttribute="centerX" secondItem="fnl-2z-Ty3" secondAttribute="centerX" id="NwI-p8-oBk"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="Yxk-Av-dCf" secondAttribute="bottom" constant="44" id="OIQ-79-9u8"/>
+                <constraint firstItem="ez7-9p-rd9" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="64" id="fWl-2y-cvF"/>
+                <constraint firstItem="ez7-9p-rd9" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="32" id="hlD-mT-aGm"/>
+                <constraint firstItem="Yxk-Av-dCf" firstAttribute="top" secondItem="d1A-Tf-Hpi" secondAttribute="bottom" constant="30" id="l0H-Q5-oC2"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="ez7-9p-rd9" secondAttribute="trailing" constant="32" id="pvN-RR-KB2"/>
+                <constraint firstItem="d1A-Tf-Hpi" firstAttribute="centerX" secondItem="fnl-2z-Ty3" secondAttribute="centerX" id="vlj-7z-tyb"/>
+            </constraints>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
+            <point key="canvasLocation" x="137.68115942028987" y="110.49107142857143"/>
         </view>
     </objects>
 </document>
