--- a/Test_bb/Controllers/MainViewController.xib
+++ b/Test_bb/Controllers/MainViewController.xib
@@ -22,6 +22,7 @@
             <subviews>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ez7-9p-rd9">
                     <rect key="frame" x="32" y="108" width="350" height="30"/>
+                    <accessibility key="accessibilityConfiguration" identifier="main_title_label"/>
                     <constraints>
                         <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="30" id="PhA-CZ-qbX"/>
                     </constraints>
